Fixed some layout issues in the contact section

--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ input {
 
 .contact-info {
   width: 90%;
+  text-align: left;
   margin: 20px auto 0 auto;
 }
 
